# group-project-aerial-robotics

./: .gitignore  LICENSE  README.md  auto_capture.py  company1.db  manual_capture_client.py  manual_capture_server.py
behaviour_based_control/: main.py
behaviour_based_control/behaviours/: __init__.py  approach_rhino.py  base_behaviour.py  dispatch_package.py  path_following.py  path_planning.py  process_data.py  return_home.py  start_mission.py  survey.py  takeoff.py
behaviour_based_control/drone_package/: __init__.py  drone.py
capture-images/: calibration.npz
gpiar_db/: .gitignore  database.py  main.py
gpiar_db/models/: __init__.py  base_model.py  custom_fields.py  image.py  mission.py
opengl-simulator/: CMakeLists.txt  README.md  main.py  prompt-convo-coords.md  setup.py
opengl-simulator/include/: CustomTypes.h  KeyboardCallback.h  TextRendering.h  pid.py
opengl-simulator/src/: main.c
planner/: __init__.py  drone.py  geometry_utils.py  kml_parser.py  main.py  map_generator.py  path_planner.py
semi-autonomous-approach/: auto_capture.py  base_model.py  custom_fields.py  database.py  image.py  image_processor.py  live_feed.py  main.py  mission.py  remove_duplicates.py  simple.py
